public interface Fruit {
    void accept(Visitor visitor);
}
