public interface Visitor {
    void visit(Apple fruit);
    void visit(Banana fruit);
}
